# BasicService

./: .gitignore  API-document.md  API-document.yaml  Cargo.toml  README.md  config.properties.example
docker/: build.sh  release.sh
docker/files/: Dockerfile  cargo-config  config.properties.template  startup.sh
migration/: 0-1569496015.sql  0-1569723437.sql  1-1582787965.sql
src/: lib.rs  main.rs
src/db/: mod.rs
src/model/: app.rs  app_use.rs  global_setting.rs  mod.rs  registration_code.rs  token.rs  user.rs  verify.rs
src/server/: app.rs  app_management.rs  app_use.rs  app_use_management.rs  app_verify.rs  global_setting.rs  mod.rs  register.rs  registration_code.rs  token.rs  user.rs  user_management.rs
src/service/: app.rs  app_management.rs  app_use.rs  app_use_management.rs  app_verify.rs  global_setting.rs  image.rs  mod.rs  registration_code.rs  token.rs  user.rs  user_management.rs
src/task/: mod.rs
src/util/: check.rs  config.rs  mod.rs  parameters.rs
